--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,6 +3,7 @@
 services:
   database:
     image: postgres:13.3
+    container_name: postgres_db
     environment:
       POSTGRES_DB: library
       POSTGRES_USER: user
@@ -14,6 +15,7 @@ services:
   
   pgadmin:
     image: dpage/pgadmin4
+    container_name: pgadmin
     environment:
       PGADMIN_DEFAULT_EMAIL: admin@admin.com
       PGADMIN_DEFAULT_PASSWORD: root
